# bazel_repo

./: .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  bazel-bazel_repo  bazel-bin  bazel-out  bazel-testlogs  main.c
