
###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "postgres", version = "14.18.bcr.3")
bazel_dep(name = "boringssl", version = "0.20241024.0")
bazel_dep(name = "openssl", version = "3.3.1.bcr.3")
bazel_dep(name = "rules_license", version = "0.0.8")
bazel_dep(name = "rules_cc", version = "0.0.9")